syntax = "proto3";

package auth;

message ReqNewRegister {
    string email = 1;
    string name = 2;
    string password = 3;
    string phone = 4;
    string role = 5;
    string dob = 6;
}

message ResNewRegister {
    int32 status = 1;
    string message = 2;
}

message ReqLogin {
    string email = 1;
    string password = 2;
}

message ResLogin {
    string status = 1;
    string message = 2;
    string token = 3;
}

message ReqUserProfile {
    string id = 1;
    string token = 2;
}

message ResUserProfile {
    string id = 1;
    string name = 2;
    string email = 3;
    string phone = 4;
    string role = 5;
    string dob = 6;
    string createdAt = 7;
    string updatedAt = 8;
    int32 status = 9;
}

message ReqUpdateData {
    string token = 1;
    string name = 2;
    string email = 3;
    string phone = 4;
    string role = 5;
    string dob = 6;
    string id = 7;
}

message ResUpdateData {
    int32 status = 1;
    string message = 2;
}

message ReqDeleteAccount {
    string id = 1;
    string token = 2;
}

message ResDeleteAccount {
    int32 status = 1;
    string message = 2;
}

service Authenticate {
    rpc PostRegister(ReqNewRegister) returns (ResNewRegister);
    rpc PostLogin(ReqLogin) returns (ResLogin);
    rpc GetProfile(ReqUserProfile) returns (ResUserProfile);
    rpc DeleteUser(ReqDeleteAccount) returns (ResDeleteAccount);
}
